[package]
name = "icm20689"
version = "0.1.0"
authors = ["Todd Stellanova <tstellanova@users.noreply.github.com>"]
edition = "2018"
description = "ICM-20689 6DOF IMU driver for embedded hal"
license = "BSD-3-Clause"
repository = "https://github.com/tstellanova/icm20689"
categories = [
    "embedded",
    "hardware-support",
    "no-std",
]
keywords = [
    "embedded-hal-driver",
    "ICM-20689",
    "ICM20689",
    "MPU9250",
    "IMU",
    "6DOF",
    "accelerometer",
    "gyroscope",
    "Invensense",
    "TDK"
]
readme = "README.md"

[dependencies]
embedded-hal = { version = "0.2.3", features = ["unproven"] }

[dev-dependencies]
embedded-hal-mock = "0.7.1"
