[package]
name = "icm20689"
version = "0.1.1"
authors = ["Todd Stellanova <tstellanova@users.noreply.github.com>"]
edition = "2018"
description = "ICM-20689 6DOF IMU driver for embedded hal"
license = "BSD-3-Clause"
repository = "https://github.com/tstellanova/icm20689"
categories = [
    "embedded",
    "hardware-support",
    "no-std",
]
keywords = [
    "embedded-hal-driver",
    "ICM20689",
    "ICM20608",
    "IMU",
    "6DOF",
]
readme = "README.md"

[dependencies]
embedded-hal = "1.0.0"
cortex-m = "0.6.2"
panic-rtt-core = {version="0.1.0", optional=true}

[dev-dependencies]
embedded-hal-mock = "0.10.0"

[features]
default = []
rttdebug = ["panic-rtt-core"]


